--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
 <meta name="format-detection" content="telephone=no,address=no,email=no">
 
-<link rel="stylesheet" href="css/swiper.min.css">	
+<link rel="stylesheet" href="css/swiper.min.css">
 <link rel="stylesheet" href="css/default.css">
 <link rel="stylesheet" href="css/layout.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/fakeLoader.css">
 <link rel="stylesheet" href="css/bxslider.css">
+<link rel="shortcut icon" href="favicon.ico">
 <script async="" src="js/analytics.js"></script>
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
@@ -159,7 +160,7 @@ var _hmt = _hmt || [];
                 <div class="value" style="opacity: 1;"><img src="images/kv_external-circle.png" alt=""></div>
             </div>
             <p id="rev-2" class="mid_txt block-revealer"><div class="block-revealer__element" style="transform: scaleX(0); transform-origin: 100% 50% 0px; background-color: rgb(255, 255, 255); opacity: 1;"></div></p>
-        		<div class="block-revealer__content atip" style="opacity: 1;">为企业PPT路演定制而生！</div>
+        		<div class="block-revealer__content atip" style="opacity: 1;">路演PPT-PPT定制专家！</div>
         </div>
         
         <span class="scroll_wrap" style="opacity: 1;">
@@ -217,7 +218,7 @@ var _hmt = _hmt || [];
           		<div class="box">
 	          		<i class="icon1"></i>
 	          		<h3>PPT品牌策划全案服务</h3>
-	          		<span>构建全系列的品牌传播体系，从定位、概念、优势、文化、应用等一整套品牌表述到设计执行，以专业的品牌全案整合流程打造行业内标杆型品牌</span>
+	          		<span>构建全系列的品牌传播体系，从定位、概念、优势、文化、应用等一整套品牌表述到设计执行，以专业的品牌全案整合流程打造行业内标杆型品牌。</span>
 	          		<div onclick="openQQ()">我要咨询&gt;&gt;</div>
           		</div>
           	</li>
@@ -225,15 +226,15 @@ var _hmt = _hmt || [];
           		<div class="box">
 	          		<i class="icon2"></i>
 	          		<h3>PPT定制 /PPT美化服务</h3>
-	          		<span>构建全系列的品牌传播体系，从定位、概念、优势、文化、应用等一整套品牌表述到设计执行，以专业的品牌全案整合流程打造行业内标杆型品牌</span>
+	          		<span>我们反对机器软件美化PPT呆板式操作，我们建议高级视觉设计师一对一的服务标准，从定制PPT到美化PPT我们以高标准的水准要求自己，每一块的产品质量输出都有据可依。</span>
 	          		<div>我要咨询&gt;&gt;</div>
           		</div>
           	</li>
           	<li class="flexbox">
           		<div class="box">
 	          		<i class="icon3"></i>
-	          		<h3>线下VI形式设计服务</h3>
-	          		<span>构建全系列的品牌传播体系，从定位、概念、优势、文化、应用等一整套品牌表述到设计执行，以专业的品牌全案整合流程打造行业内标杆型品牌</span>
+	          		<h3>互联网产品UI设计服务</h3>
+	          		<span>我们具备10年相关经验互联网IT精英人才，对网站，APP，小程序，软件，H5，界面UI界面有着丰富的设计经验，我们常年承接互联网产品设计与开发服务的外包。</span>
 	          		<div onclick="openQQ()">我要咨询&gt;&gt;</div>
           		</div>
           	</li>
@@ -241,7 +242,7 @@ var _hmt = _hmt || [];
           		<div class="box">
 	          		<i class="icon4"></i>
 	          		<h3>企业PPT内部培训服务</h3>
-	          		<span>构建全系列的品牌传播体系，从定位、概念、优势、文化、应用等一整套品牌表述到设计执行，以专业的品牌全案整合流程打造行业内标杆型品牌</span>
+	          		<span>我们提供企业内部培训服务，有帮助在工作汇报、公司宣传、产品推介、竞标演示、方案演示、展览展示、规划设计、课题研讨、竞聘演说、咨询报告、领导讲话、培训课件...等取得广泛应用。</span>
 	          		<div onclick="openQQ()">我要咨询&gt;&gt;</div>
           		</div>
           	</li>
@@ -259,7 +260,7 @@ var _hmt = _hmt || [];
         	<li></li>
         	<li><img src="images/khal_39.png" /></li>
         	<li></li>
-        	<li><img src="images/khal_42.jpg" /></li>        	
+        	<li><img src="images/khal_42.jpg" /></li>
         	<li><img src="images/khal_45.png" /></li>
         	<li></li>
         	<li><img src="images/khal_47.jpg" /></li>
@@ -346,15 +347,15 @@ var _hmt = _hmt || [];
     	<div class="datari flex">
     		<div class="flexbox list">
     			<p>服务客户</p>
-    			<span><i class="timer" data-to="8961" data-speed="3000"></i><b>+</b></span>
+    			<span><i class="timer" data-to="285" data-speed="3000"></i><b>+</b></span>
     		</div>
     		<div class="flexbox list">
     			<p>服务客户</p>
-    			<span><i class="timer" data-to="5068" data-speed="3000"></i><b>+</b></span>
+    			<span><i class="timer" data-to="53" data-speed="3000"></i><b>+</b></span>
     		</div>
     		<div class="flexbox list">
     			<p>服务客户</p>
-    			<span><i class="timer" data-to="6000" data-speed="3000"></i><b>+</b></span>
+    			<span><i class="timer" data-to="133" data-speed="3000"></i><b>+</b></span>
     		</div>
     	</div>
     </div>
@@ -396,10 +397,11 @@ var _hmt = _hmt || [];
 		<h4>服务内容</h4>
 		<ul>
 			<li><span>NO1:</span>深度企业了解，发掘企业核心价值  高级设计师出策划方案，绘制原型图展示PPT平面结构图与甲方确认。</li>
-			<li><span>NO1:</span>深度企业了解，发掘企业核心价值  高级设计师出策划方案，绘制原型图展示PPT平面结构图与甲方确认。</li>
-			<li><span>NO1:</span>深度企业了解，发掘企业核心价值  高级设计师出策划方案，绘制原型图展示PPT平面结构图与甲方确认。</li>
-			<li><span>NO1:</span>深度企业了解，发掘企业核心价值  高级设计师出策划方案，绘制原型图展示PPT平面结构图与甲方确认。</li>
-			<li><span>NO1:</span>深度企业了解，发掘企业核心价值  高级设计师出策划方案，绘制原型图展示PPT平面结构图与甲方确认。</li>
+			<li><span>NO2:</span>设计师通过视觉表现能力及合理的动画效果进行制作成品，作品总数为40P以内。</li>
+			<li><span>NO3:</span>PTT内容更新在不新增加页数前提下，可免费更新内容  优化内容  一年可优化6次。</li>
+			<li><span>NO4:</span>一年可2次进行企业员工进行培训使用方法，增添删改文字及替换图片内容。</li>
+			<li><span>NO5:</span>我方可以为会员提供一年免费协助寻找素材图片  以及处理图片 供应PPT展示更新。</li>
+            <li><span>NO6:</span>会员连续续费二年的客户 我方将免费为企业建设网站一个  含继续享受会员PPT的服务。</li>
 		</ul>
 	</div>
 </div>
