--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>路演PPT</title>
-
+<title>【杭州PPT设计公司】 | PPT设计制作 | 人工PPT定制 | PPT外包 | PPT美化 | 路演PPT | </title> 
+<meta name="Keywords" content="PPT设计公司,PPT优化,PPT定制,PPT动画设计,PPT美化,PPT外包,PPT模板制作,动态PPT,商务PPT,企业PPT,公司PPT,路演PPT " /> 
+<meta name="Description" content="路演PPT-PPT定制专家！" /> 
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
 <meta name="format-detection" content="telephone=no,address=no,email=no">
 
@@ -350,12 +351,12 @@ var _hmt = _hmt || [];
     			<span><i class="timer" data-to="285" data-speed="3000"></i><b>+</b></span>
     		</div>
     		<div class="flexbox list">
-    			<p>服务客户</p>
-    			<span><i class="timer" data-to="53" data-speed="3000"></i><b>+</b></span>
+    			<p>上市公司</p>
+    			<span><i class="timer" data-to="52" data-speed="3000"></i><b>+</b></span>
     		</div>
     		<div class="flexbox list">
-    			<p>服务客户</p>
-    			<span><i class="timer" data-to="133" data-speed="3000"></i><b>+</b></span>
+    			<p>中小企业</p>
+    			<span><i class="timer" data-to="233" data-speed="3000"></i><b>+</b></span>
     		</div>
     	</div>
     </div>
