--- a/index.html
+++ b/index.html
@@ -193,14 +193,22 @@ var _hmt = _hmt || [];
         <h2 class="case">客户案例</h2>
         <div class="swiper-container custmer">
         	<ul class="swiper-wrapper">
-          	<li class="caseList swiper-slide"><img src="images/P01_21.jpg" />
-                <p>杭州御风环保科技有限公司PPT制作</p></li>
-          	<li class="caseList swiper-slide"><img src="images/P02_21.jpg" />
-                <p>MXD，因你而来主题PPT制作</p></li>
-          	<li class="caseList swiper-slide"><img src="images/P03_25.jpg" />
-                <p>芝麻信用业务介绍PPT制作</p></li>
-          	<li class="caseList swiper-slide"><img src="images/P04_27.jpg" />
-                <p>新浪舆情通产品介绍PPT制作</p></li>
+          	<li class="caseList swiper-slide" data-index="0">
+                <img src="images/P01_21.jpg" />
+                <p>杭州御风环保科技有限公司PPT制作</p>
+            </li>
+          	<li class="caseList swiper-slide" data-index="1">
+                <img src="images/P02_21.jpg" />
+                <p>MXD，因你而来主题PPT制作</p>
+            </li>
+          	<li class="caseList swiper-slide" data-index="2">
+                <img src="images/P03_25.jpg" />
+                <p>芝麻信用业务介绍PPT制作</p>
+            </li>
+          	<li class="caseList swiper-slide" data-index="3">
+                <img src="images/P04_27.jpg" />
+                <p>新浪舆情通产品介绍PPT制作</p>
+            </li>
           </ul>
 	    <div class="swiper-pagination"></div>
 	  </div>
